# lapp-pyckx_backend

./: .env.example  .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/api/: mod.rs
src/api/dto/: auth.rs  mod.rs  user.rs
src/api/handlers/: auth.rs  mod.rs  user.rs
src/apps/: mod.rs
src/apps/collection/: app.rs  mod.rs
src/config/: config.rs
src/domain/: app_instance.rs  mod.rs  session.rs  user.rs
src/error/: app.rs  auth.rs  code.rs  mod.rs  response.rs  supabase.rs
src/infrastructure/: mod.rs
src/infrastructure/supabase/: client.rs  mod.rs  types.rs
src/services/: auth.rs  mod.rs
src/shared/: mod.rs
src/shared/constants/: errors.rs  mod.rs  urls.rs
src/tests/: mod.rs  supabase_login_test.rs
