[package]
name = "LAPP"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64 encoding/decoding (for JWT payload)
base64 = "0.22"

# UUID generation for session IDs
uuid = { version = "1", features = ["v4"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Environment
dotenv = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling (keeping for compatibility, but we use custom errors)
thiserror = "1"
